# better-paperless-ngx

./: .env.example  .gitignore  AGENTIC_MODE.md  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  USAGE.md  pyproject.toml
.github/workflows/: docker-publish.yml
config/: config.example.yaml
config/rules/: tagging_rules.example.yaml
docker/: .dockerignore  Dockerfile  docker-compose.yml
src/better_paperless/: __init__.py  __main__.py
src/better_paperless/api/: __init__.py  client.py  exceptions.py  models.py
src/better_paperless/cli/: __init__.py  commands.py
src/better_paperless/core/: __init__.py  cache.py  config.py  logger.py  validators.py
src/better_paperless/llm/: __init__.py  base.py  factory.py  openai_provider.py  prompts.py
src/better_paperless/processors/: __init__.py  agentic_processor.py  correspondent_matcher.py  document_processor.py  metadata_extractor.py  tag_engine.py  title_generator.py
